misc4.0/progressive-delivery/experiment-four/rollouts/reviews-canary-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: reviews-canary
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
  type: ClusterIP
  selector:
    app: reviews
