misc4.0/progressive-delivery/experiment-four/rollouts/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: reviews
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: openshift-ingress
  rules:
    - backendRefs:
        - name: reviews-stable
          port: 9080
        - name: reviews-canary
          port: 9080
